makefile to deploy to gh_pages

--- a/site/include/menu.html
+++ b/site/include/menu.html
@@ -1,7 +1,7 @@
 <header class="centered-navigation">
     <div class="centered-navigation-wrapper" data-section="index">
         <a href="./" class="mobile-logo">
-            <img src="./images/logo.jpg" alt>
+            <img src="./assets/images/logo.jpg" alt>
         </a>
         <a href class="centered-navigation-menu-button">
             <span class="icon-bar"></span>
@@ -9,7 +9,7 @@
             <span class="icon-bar"></span>
         </a>
         <a href class="logo">
-          <!img src="./images/logo.png" alt>
+          <!img src="./assets/images/logo.png" alt>
         </a>
         <nav>
           <ul class="centered-navigation-menu">
