--- a/site/include/header.html
+++ b/site/include/header.html
@@ -8,4 +8,4 @@
         <script type="text/javascript" src="//use.typekit.net/tjp2nro.js"></script>
         <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 <link rel="stylesheet" href="assets/dragonfly.css" type="text/css">
-
+<a id="forkme_banner" href="https://github.com/Philipp-Neubauer/FFWD-Fish">View on GitHub</a>
