--- a/site/include/menu.html
+++ b/site/include/menu.html
@@ -13,8 +13,8 @@
         </a>
         <nav>
           <ul class="centered-navigation-menu">
-            <li class="nav-link" data-section="index" class="mobile-only"><a href="./">Home</a></li>
-            <li class="nav-link" data-section="people"><a href="./people">People</a></li>
+            <li class="nav-link" data-section="index" class="mobile-only"><a href="./home.html">Home</a></li>
+            <li class="nav-link" data-section="people"><a href="./people.html">People</a></li>
             <li class="nav-link" data-section="research"><a href="./blog">Blog</a></li>
             <li class="nav-link" data-section="publications"><a href="./publications">Publications</a></li>
             <li class="nav-link" data-section="maps"><a href="./maps">Maps</a></li>
