--- a/site/include/menu.html
+++ b/site/include/menu.html
@@ -13,7 +13,7 @@
         </a>
         <nav>
           <ul class="centered-navigation-menu">
-            <li class="nav-link" data-section="index" class="mobile-only"><a href="./home.html">Home</a></li>
+            <li class="nav-link" data-section="index" class="mobile-only"><a href="./index.html">Home</a></li>
             <li class="nav-link" data-section="people"><a href="./people.html">People</a></li>
             <li class="nav-link" data-section="research"><a href="./blog">Blog</a></li>
             <li class="nav-link" data-section="publications"><a href="./publications">Publications</a></li>
