--- a/site/templates/default.html
+++ b/site/templates/default.html
@@ -8,10 +8,50 @@
         <link rel="stylesheet" type="text/css" href="/css/style.css" />
     </head>
     <body>
+        <header class="navigation">
+            <div class="navigation-wrapper">
+                <a href="javascript:void(0)" class="logo">
+                    <img src="/images/logo.png" alt="Logo Image">
+                </a>
+                <a href="javascript:void(0)" class="navigation-menu-button" id="js-mobile-menu">MENU</a>
+                <div class="nav">
+                    <ul id="js-navigation-menu" class="navigation-menu show">
+                        <li class="nav-link"><a href="/index.html">Home</a></li>
+                        <li class="nav-link"><a href="/archive.html">Archive</a></li>
+                        <li class="nav-link"><a href="/about.html">About Us</a></li>
+                        <li class="nav-link"><a href="/contact.html">Contact</a></li>
+                    </ul>
+                </div>
+            </div>
+        </header>
         <main>
+            $if(hero)$
+            <div class="hero">
+                <div class="hero-inner">
+                    <div class="hero-copy">
+                    </div>
+                </div>
+            </div>
+            $endif$
+            <div class="container">
             $body$
+            </div>
         </main>
         <footer>
         </footer>
+        <script src="//code.jquery.com/jquery-2.1.3.min.js"></script>
+        <script>
+        $$(document).ready(function() {
+        $$('#js-navigation-menu').removeClass("show");
+        $$('#js-mobile-menu').on('click', function(e) {
+        e.preventDefault();
+        $$('#js-navigation-menu').slideToggle(function(){
+        if($$('#js-navigation-menu').is(':hidden')) {
+        $$('#js-navigation-menu').removeAttr('style');
+        }
+        });
+        });
+        });
+        </script>
     </body>
 </html>
