--- a/site/templates/default.html
+++ b/site/templates/default.html
@@ -18,7 +18,8 @@
                     <ul id="js-navigation-menu" class="navigation-menu show">
                         <li class="nav-link"><a href="/index.html">Home</a></li>
                         <li class="nav-link"><a href="/archive.html">Archive</a></li>
-                        <li class="nav-link"><a href="/about.html">About Us</a></li>
+                        <li class="nav-link"><a href="/about.html">About</a></li>
+                        <li class="nav-link"><a href="/people.html">People</a></li>
                         <li class="nav-link"><a href="/contact.html">Contact</a></li>
                     </ul>
                 </div>
