--- a/site/stylesheets/_navigation.scss
+++ b/site/stylesheets/_navigation.scss
@@ -42,13 +42,13 @@ header.navigation {
 
   .logo {
     float: left;
-    max-height: $navigation-height;
+    max-height: $navigation-height+20;
     padding-left: $navigation-padding;
     padding-right: 2em;
 
     img {
-      max-height: $navigation-height;
-      padding: .8em 0;
+      max-height: $navigation-height+20;
+      padding: .1em 0;
     }
   }
 
