--- a/site/stylesheets/_hero.scss
+++ b/site/stylesheets/_hero.scss
@@ -13,18 +13,18 @@
   $hero-background-top: $color-secondary-0;
   $hero-color: white;
   $hero-image: '../images/bg.jpg';
-  $hero-height: em(500);
+  $hero-height: em(200);
 
   @include background(url($hero-image), no-repeat $hero-background-top scroll);
-  background-position: top;
+  background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   padding-bottom: 3em;
   height: $hero-height;
 
   .hero-logo img {
-    height: 4em;
-    margin-bottom: 1em;
+    height: 12em;
+    margin-bottom: 0.5em;
   }
 
   .hero-inner {
