--- a/site/templates/default.html
+++ b/site/templates/default.html
@@ -11,7 +11,7 @@
         <header class="navigation">
             <div class="navigation-wrapper">
                 <a href="javascript:void(0)" class="logo">
-                    <img src="/images/logo.png" alt="Logo Image">
+                    <img src="/images/logo_Sam.png" alt="Logo Image">
                 </a>
                 <a href="javascript:void(0)" class="navigation-menu-button" id="js-mobile-menu">MENU</a>
                 <div class="nav">
