--- a/site/stylesheets/base/_variables.scss
+++ b/site/stylesheets/base/_variables.scss
@@ -33,11 +33,11 @@ $light-green: #E6EFC2;
 
 
 /* Palette URL: http://paletton.com/#uid=53l0u0kirns8iAldhsCn7iNsJdf */
-$color-primary-0: #27ADD3; /* Main Primary color */
-$color-primary-1: #77CEE7;
-$color-primary-2: #4BBCDC;
-$color-primary-3: #069EC9;
-$color-primary-4: #037392;
+$color-primary-0: #638EF2;	/* Main Primary color */
+$color-primary-1: #BBCEFB;
+$color-primary-2: #89ABF7;
+$color-primary-3: #4073E9;
+$color-primary-4: #1B55DB;
 
 $color-secondary-0: #3E4E7E; /* Main Secondary color (1) */
 $color-secondary-1: #8F9ABA;
