--- a/site/stylesheets/_navigation.scss
+++ b/site/stylesheets/_navigation.scss
@@ -47,7 +47,7 @@ header.navigation {
     padding-right: 2em;
 
     img {
-      max-height: $navigation-height+20;
+      max-height: $navigation-height;
       padding: .1em 0;
     }
   }
