add github link to menu

--- a/site/templates/default.html
+++ b/site/templates/default.html
@@ -11,7 +11,7 @@
         <header class="navigation">
             <div class="navigation-wrapper">
                 <a href="javascript:void(0)" class="logo">
-                    <img src="/images/logo_Sam.png" alt="Logo Image">
+                    <img src="/images/logo_Sam.png" alt="Logo Image" align="middle">
                 </a>
                 <a href="javascript:void(0)" class="navigation-menu-button" id="js-mobile-menu">MENU</a>
                 <div class="nav">
@@ -20,8 +20,10 @@
                         <li class="nav-link"><a href="/archive.html">Archive</a></li>
                         <li class="nav-link"><a href="/about.html">About</a></li>
                         <li class="nav-link"><a href="/contact.html">Contact</a></li>
+                        <li class="nav-link"><a href="https://github.com/Philipp-Neubauer/FFWD-Fish"> <img src="/images/Octocat.png" width="66.66" height="55.41" align="top"></a></li>
                     </ul>
                 </div>
+                 
             </div>
         </header>
         <main>
