fixx R highlighting CSS

--- a/site/stylesheets/ffwd-fish.scss
+++ b/site/stylesheets/ffwd-fish.scss
@@ -26,14 +26,14 @@ pre {
 // KeyWordTok
 .sourceCode .kw { color: #268BD2; }
 // DataTypeTok
-.sourceCode .dt { color: #268BD2; }
+.sourceCode .dt { color: #D2AD26; }
 
 // DecValTok (decimal value), BaseNTok, FloatTok
 .sourceCode .dv, .sourceCode .bn, .sourceCode .fl { color: #D33682; }
 // CharTok
 .sourceCode .ch { color: #DC322F; }
 // StringTok
-.sourceCode .st { color: #2AA198; }
+.sourceCode .st { color: #09B5A8; }
 // CommentTok
 .sourceCode .co { color: #93A1A1; }
 // OtherTok
